crates/test-generator/tests/snapshots/ts/test_generated_array.snap
---
source: crates/test-generator/tests/typescript.rs
expression: snapshot_content
---
Source Code:
[item1, item2]

AST:
(program
  (expression_statement
    (array
      (identifier "item1")
      (identifier "item2")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage { position: { 1:2 to 1:7 }, name: "item1", kind: Identifier, context: None },
        Usage { position: { 1:9 to 1:14 }, name: "item2", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
