crates/test-generator/tests/snapshots/ts/test_generated_assignment_pattern.snap
---
source: crates/test-generator/tests/typescript.rs
expression: snapshot_content
---
Source Code:
function test([first = 1, second = 2] = []) { return first + second; }

AST:
(program
  (function_declaration
    name: (identifier "test")
    parameters: (formal_parameters
      (required_parameter
        pattern: (array_pattern
          (assignment_pattern
            left: (identifier "first")
            right: (number "1")
          )
          (assignment_pattern
            left: (identifier "second")
            right: (number "2")
          )
        )
        value: (array)
      )
    )
    body: (statement_block
      (return_statement
        (binary_expression
          left: (identifier "first")
          right: (identifier "second")
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:10 to 1:14 }, name: "test", definition_type: FunctionDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(true) },
        Definition { position: { 1:16 to 1:21 }, name: "first", definition_type: VariableDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
        Definition { position: { 1:27 to 1:33 }, name: "second", definition_type: VariableDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:54 to 1:59 }, name: "first", kind: Identifier, context: None },
        Usage { position: { 1:62 to 1:68 }, name: "second", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
