crates/test-generator/tests/snapshots/ts/test_generated_await_expression.snap
---
source: crates/test-generator/tests/typescript.rs
expression: snapshot_content
---
Source Code:
await promise

AST:
(program
  (expression_statement
    (await_expression
      (identifier "promise")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "promise",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 14,
            },
            context: None,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TypeScript",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
